<!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/instagram" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/phone_number_username_or_email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="35dp"
        android:background="#3f729b"
        android:onClick="button"
        android:tag="0"
        android:text="@string/log_in"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/loginButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="216dp"
        android:layout_height="56dp"
        android:layout_below="@+id/divider"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="70dp"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_below="@+id/divider"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="75dp"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:background="#FFFFFF"
        android:onClick="switchButton"
        android:tag="1"
        android:text="@string/sign_up"
        android:textColor="#315E89" />

</RelativeLayout>
